[workspace]
resolver = "2"

members = [
    "skirmish_1",
    "skirmish_2",
    "skirmish_3",
    "skirmish_5/callback",
    "skirmish_5/liquidity_pool",
    "skirmish_5/deployer",
    "skirmish_6/contract",
    "skirmish_6/solve",
    "skirmish_7",
    "skirmish_9/old_contract",
    "skirmish_10/contract",
]

[workspace.dependencies.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
version = "20.0.0-rc2"
rev = "0992413"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
