[workspace]
resolver = "2"
members = [
    "skirmish_1",
    "skirmish_2",
    "skirmish_3",
    "skirmish_5/callback",
    "skirmish_5/liquidity_pool",
    "skirmish_5/deployer",
    "skirmish_6/contract",
    "skirmish_6/solve",
    "skirmish_7",
    "skirmish_9/old_contract",
    "skirmish_9/new_contract",
    "skirmish_10/contract",
    "skirmish_10/solve",
    "skirmish_11/restore",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quyet"]
publish = false

[workspace.dependencies]
soroban-sdk = "20.4.0"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
itertools = "0.12.1"
arrayvec = { version = "0.7.4", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
