[package]
name = "skirmish_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
itertools = "0.10.5"

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
