[package]
name = "skirmish_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
rand = { version = "0.8.5", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
